About us - Fixed spacing issue in transparency quote
Tested in responsiveness from BIIG Screen to Medium Screen

--- a/public/css/about-us.css
+++ b/public/css/about-us.css
@@ -192,6 +192,9 @@ a.board-arrows:active{
 }
 
 @media only screen and (max-width:991px){
+    body #fullscreen-hero {
+        background-position: left center;
+    }
     body #fullscreen-hero #hero-content {
         padding: 7.5em 0 8.2em 0;
     }
@@ -330,6 +333,9 @@ a.board-arrows:active{
 
 @media only screen and (min-width:992px) and (max-width: 1023px){
 
+    #trans-quote-div{
+        min-width: 70%;
+    }
     #media-coverage-companies{
         margin: 0 auto !important;
     }
@@ -340,10 +346,7 @@ a.board-arrows:active{
         height: 90%;
     }
     #exec-inner-left{
-        padding: 1.7em 7% 0 3.7%;
-    }
-    #trans-quote-div{
-        min-width: 70%;
+        padding: 1.7em 2.5% 0 3.7%;
     }
     #advisory-board{
         margin-top: 0;
@@ -358,6 +361,12 @@ a.board-arrows:active{
 @media only screen and (min-width: 1024px) {
     .hide-on-lg{
         display: none !important;
+    }
+    #transparency-right{
+        padding-left:3em;
+    }
+    #trans-quote-div{
+        min-width: 65%;
     }
     #media-coverage-floater {
         position: relative;
@@ -376,7 +385,7 @@ a.board-arrows:active{
     }
     #exec-inner-left{
         min-width: 40%;
-        padding: 1.7em 7% 0 3.7%;
+        padding: 1.7em 2.5% 0 3.7%;
     }
     .med-hide{
         display: none;
@@ -397,9 +406,6 @@ a.board-arrows:active{
         margin-bottom: 3em;
         max-width: initial;
     }
-    #trans-quote-div{
-        min-width: 70%;
-    }
 }
 
 @media all and (min-width:1200px){
@@ -410,7 +416,7 @@ a.board-arrows:active{
         margin: 3.2em 0 0 20%
     }
     #transparency-left {
-        padding: 9em 0.4em 14.5em 0;
+        padding: 9em 0.4em 6em 0;
         width: 37%;
     }
     #transparency-left p{
@@ -421,14 +427,16 @@ a.board-arrows:active{
         width: 63%;
     }
     #trans-quote-div{
-        min-width: 0;
+        min-width: 55%;
     }
     #people-behind-bg {
-        padding: 6.5em 0 10.5em 0;
+        padding: 6.5em 0 11em 0;
     }
     #exec-inner-left{
         min-width: 0;
-        padding: 1.7em 7% 0 3.7%;
+    }
+    #exec-inner-right{
+        min-width: 42%;
     }
     #exec-title {
         font-size: 2.1em;
@@ -441,15 +449,21 @@ a.board-arrows:active{
     }
 
     #advisory-board {
-        padding-top: 1.5em;
+        padding-top: 2.7em;
     }
     #board-title {
         font-size: 1.9em;
     }
+    #board-list {
+        padding-top: 2.5em;
+    }
+    .board-name {
+        padding-top: 2.3em;
+    }
     #last-quote {
         font-size: 1.9em;
-        transform: translate(12px,20px);
-        padding-bottom: 1em;
+        transform: translate(22px,12px);
+        padding-bottom: 1.2em;
     }
     body #fullscreen-hero {
         background-position: center top;
@@ -464,6 +478,21 @@ a.board-arrows:active{
 }
 
 @media only screen and (min-width: 1800px) {
+    #transparency-left{
+        padding-bottom: 14.5em;
+    }
+    #trans-quote-div{
+        min-width: 0;
+    }
+    #exec-inner-left {
+        padding: 1.7em 7% 0 3.7%;
+    }
+    #exec-inner-right{
+        min-width: 42%;
+    }
+    .exec-img{
+        transform: translate(-6px,-9px);
+    }
     #media-coverage-floater {
         height: 900px;
         width: 870px;
@@ -525,11 +554,13 @@ a.board-arrows:active{
         width: 23%;
     }
     #circ {
-        width: 20%;
+        width: 16%;
         top: 55%;
+        left: -4%;
     }
-    .exec-img{
-        width: 87%;
+    .exec-img {
+        width: 69%;
+        transform: none;
     }
     #media-coverage-floater{
         height: 75em;
@@ -619,13 +650,13 @@ a.board-arrows:active{
         margin-bottom: 6.5%;
     }
     #advisory-board {
-        padding-top: 2.8em;
+        padding-top: 4em;
     }
     #board-box {
         padding-top: 1.2em;
     }
     .board-name {
-        padding-top: 1.5em;
+        padding-top: 2.8em;
     }
     .board-rank {
         line-height: 1.1em;
@@ -665,13 +696,6 @@ a.board-arrows:active{
     }
     #transparency-right-4 {
         width: 23%;
-    }
-    #circ {
-        width: 20%;
-        top: 55%;
-    }
-    .exec-img{
-        width: 87%;
     }
     #media-coverage-floater{
         height: 113em;
@@ -768,16 +792,13 @@ a.board-arrows:active{
         margin-bottom: 7%;
     }
     #advisory-board {
-        padding-top: 5.4em;
+        padding-top: 5.9em;
     }
     #board-box {
         padding-top: 4.2em;
     }
     #board-list{
         padding-bottom: 1em;
-    }
-    .board-name {
-        padding-top: 1.5em;
     }
     .board-rank {
         line-height: 1.1em;
